# lokust

./: CMakeLists.txt  cmake_with_brew.sh  readme.md
src/: lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
tests/: lexer_test.cpp  parser_test.cpp
